syntax = "proto3";

package inter.v1;
option go_package = "github.com/daidai53/webook/inter/v1;interv1";

service InteractiveService {
  rpc IncrReadCnt(IncrReadCntRequest) returns (IncrReadCntResponse);
  rpc Like(LikeRequest) returns(LikeResponse);
  rpc CancelLike(CancelLikeRequest) returns (CancelLikeResponse);
  rpc Collect(CollectRequest) returns (CollectResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc GetByIds(GetByIdsRequest) returns (GetByIdsResponse);
}

message GetByIdsRequest{
  string biz = 1;
  repeated int64 ids = 2;
}

message GetByIdsResponse{
  map<int64, Interactive> inters = 1;
}

message GetRequest{
  string biz = 1;
  int64 id = 2;
  int64 uid = 3;
}

message GetResponse{
  Interactive inter = 1;
}

message Interactive{
  string biz = 1;
  int64 biz_id = 2;
  int64 read_cnt = 3;
  int64 like_cnt = 4;
  int64 collect_cnt = 5;
  bool liked = 6;
  bool collected = 7;
}

message CollectRequest{
  string biz = 1;
  int64 id = 2;
  int64 uid = 3;
  int64 cid = 4;
}

message CollectResponse{

}

message CancelLikeRequest{
  string biz = 1;
  int64 id = 2;
  int64 uid = 3;
}

message CancelLikeResponse{

}

message LikeRequest{
  string biz = 1;
  int64 id = 2;
  int64 uid = 3;
}

message LikeResponse{

}

message IncrReadCntRequest{
  string biz = 1;
  int64 bizId = 2;
}

message IncrReadCntResponse{

}